# Email-Spam-Detection

./: .gitignore  Final_Project_Report.md  README.md  app.py  code.ipynb  export_model.py  pyproject.toml  run.py  spam.csv
app/: __init__.py  routes.py  services.py  utils.py
app/static/css/: style.css
app/static/js/: dashboard.js  script.js
app/templates/: dashboard.html  index.html
models/: model.pkl  predictions_log.json  vectorizer.pkl
static/css/: style.css
static/js/: script.js
templates/: index.html
